# toy_lang

./: Cargo.toml  LICENSE  README.md  example.ll  example.toy  test.cpp
root/: index.html  styles.css
src/: lib.rs  main.rs
src/common/: macros.rs  mod.rs  traits.rs  typedef.rs
src/http/: body.rs  common.rs  header.rs  mod.rs  prelude.rs  request.rs  response.rs  status.rs
src/lexer/: error.rs  lexeme.rs  lexer.rs  mod.rs  prelude.rs  tokens.rs
src/llvm/: ir_gen.rs  mod.rs  prelude.rs
src/parser/: ast.rs  mod.rs  operation_parser.rs  parser.rs  prelude.rs
src/server/: common.rs  macros.rs  mod.rs  send.rs  server.rs
src/todo/: database.rs  mod.rs  mongodb.rs  task.rs
