[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.91"

[dependencies.mongodb]
version = "2.3.0"
features = ["tokio-sync"]

[lib]
name="http_cursed"
path="src/lib.rs"

[[bin]]
name="main"
path="src/bin/main.rs"
